Some changes and serializing and deserializing of player quests